# PersonalSiteFrontend

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FormatFiles.cmake  md.json
config/: AuthConfig.json  CMakeLists.txt  Whitelist.json
headers/: Auth.h  CMakeLists.txt  DataStructures.h  Exceptions.h  PersonalSiteExceptions.h  Service.h  Utils.h
lib/: CMakeLists.txt  Service.cc
lib/auth/: Auth.cc  AuthUserItem.cc  authnticateUser.cc  checkIfUserExists.cc  getInfoFromOAuth.cc  getUidFromToken.cc  getUserInfo.cc  writeCallback.cc  writeUserEntry.cc
lib/datastructures/: UserItem.cc
lib/exceptions/: Exceptions.cc
lib/utils/: Utils.cc
scripts/: CMakeLists.txt  frontend-server
snap/: CMakeLists.txt  snapcraft.yaml
snappyyml/: snapcraft.yaml
src/: CMakeLists.txt  Client.cc  Server.cc  TestClient.cc
thrift/: CMakeLists.txt  Service.thrift
